--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -40,7 +40,7 @@
     border-radius: 5px;
     cursor: pointer;
     justify-content: center;
-    background-color: #121619;
+    background-color: #191970; ;
     height: 50px;
     width: 180px;
     color: rgb(218, 165, 21);
