--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,7 +1,15 @@
 .navbar {
     width: 100%;
     height: 100px;
-    background-color: #121619;
+    /* Deep Navy Blue
+    background-color: #0a1f44;
+    Dark Royal Blue
+    background-color: #1a237e;  
+    Midnight Blue
+    background-color: #191970;  
+    Charcoal Blue
+    background-color: #232F3E;   */
+    background-color: #191970;  
     display: flex;
     flex-direction: row;
   }
