--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -23,7 +23,7 @@
   }
   
   .navbar .leftSide img {
-    width: 140px;
+    width: 150px;
   }
   
   .navbar .rightSide {
@@ -35,10 +35,10 @@
   }
   
   .navbar a {
-    color: rgb(218, 165, 21);
+    color: #fcba23;
     text-decoration: none;
     margin: 20px;
-    font-size: 17px;
+    font-size: 20px;
     font-weight: bold;
   }
   
