Updated Contact Page and pushed all changes

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -43,7 +43,7 @@
     background-color: #191970; 
     height: 80px;
     width: 250px;
-    color: rgb(218, 165, 21);
+    color: #fcba23;
     text-decoration: none;
     font-size: 30px;
     font-weight: bold;
